# Yakking_Yak

./: .gitignore  Cargo.toml  README.md  app.json  package.json  server-build.sh  server-start.sh
public/: start.js  style.css
public/js/: login.js  start.js
public/lib/: webnative.js
public/libs/: socketio.js  switch.css
src/: index.js
src/client/: cmdhandler.rs  encrypter.rs  main.rs  serverhandlers.rs  store.rs  utils.rs
src/css/: style.css
src/js/: login.js  server.js  start.js
src/pug/: index.pug  main.pug
src/rust/: ForeinAgent.rs  KeyBundle.rs  cmdhandler.rs  encrypter.rs  gtk.rs  gtk_main.rs  lib.rs  main.rs  msg.rs  ratchet.rs  serverhandlers.rs  store.rs  utils.rs  web.rs  web_main.rs
src/rust/all/: ForeinAgent.rs  KeyBundle.rs  forein_agent.rs  mod.rs  serverhandlers.rs  store.rs  utils.rs
src/rust/client/: forein_agent.rs  key_bundle.rs  ratchet.rs  serverhandlers.rs  store.rs  utils.rs
src/rust/client_gtk/: build_ui.rs  mod.rs  save.rs  sign_in.rs
src/rust/client_web/: save.rs
src/rust/gtk/: build_ui.rs  mod.rs  save.rs  sign_in.rs
src/rust/gtk_window/: mod.rs
src/rust/lib/: ForeinAgent.rs  KeyBundle.rs  mod.rs  ratchet.rs  serverhandlers.rs  store.rs  utils.rs
src/rust/web/: save.rs
src/server/: main.rs  sockets.rs
static/: index.html
x25519-dalek/: Cargo.toml
x25519-dalek/src/: lib.rs  x25519.rs
