[package]
name = "yakking_yak"
license = "MPL-2.0"
version = "0.1.0"
authors = ["BoisterousCoder <boisterouscoder@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
serde = {version = "1.0.115",  features = ["derive"]}
serde_json = "1.0"
base64 = "0.21.2"
x25519-dalek = {path="x25519-dalek"}
rand_core="0.6.4"
rand_chacha = "0.3.1"
aes-gcm = "0.10.1"
wasm-bindgen = "0.2"
js-sys = "0.3.60"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Window',
  'Event',
  "console"
]

[profile.release]
debug = true