[package]
name = "yakking_yak"
license = "MPL-2.0"
version = "0.1.0"
authors = ["BoisterousCoder <boisterouscoder@gmail.com>"]
edition = "2018"

[[bin]]
name = "Yakking_Yak"
path = "src/rust/gtk.rs"

[lib]
crate-type = ["cdylib"]
path = "src/rust/web.rs"

[dependencies]
serde = {version = "1.0.115",  features = ["derive"]}
serde_json = "1.0"
base64 = "0.21.2"
x25519-dalek = {path="x25519-dalek"}
rand_core="0.6.4"
rand_chacha = "0.3.1"
aes-gcm = "0.10.1"
hkdf = "0.12.3"
sha2 = "0.10.7"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
adw = { version = "~0.4", package = "libadwaita", features = ["v1_1"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.60"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Window',
  'Event',
  "console"
]

[profile.release]
debug = true
