[package]
name = "yakking_yak"
license = "MPL-2.0"
version = "0.1.0"
authors = ["BoisterousCoder <boisterouscoder@gmail.com>"]
edition = "2018"

[[bin]]
name = "yakking_yak"
path = "src/rust/gtk_main.rs"

[lib]
crate-type = ["cdylib"]
path = "src/rust/web_main.rs"

[dependencies]
serde = {version = "~1.0",  features = ["derive"]}
serde_json = "~1.0"
base64 = "~0.21"
x25519-dalek = {path="x25519-dalek"}
rand_core="~0.6"
rand_chacha = "~0.3"
aes-gcm = "~0.10"
hkdf = "~0.12"
sha2 = "~0.10"
chrono = "~0.4"
k256="~0.13"
magic-crypt = "~3.1"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gtk = { version = "*", package = "gtk4", features = ["v4_6"] }
adw = { version = "~0.4", package = "libadwaita", features = ["v1_1"] }
glib = "~0.17"
glib-macros = "~0.17"
lazy_static = "~1.4"
rust_socketio = "~0.4"
# libp2p = "~0.52"
crossbeam-queue = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "~0.2"
js-sys = "~0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "~0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Window',
  'Event',
  "console"
]

[profile.release]
debug = true
